# C-PPM-Image

./: CMakeLists.txt  PROJECT_STATEMENT.md  README.md
Trabajo-Arquitectura-main/common/: CMakeLists.txt  binaryio.hpp  progargs.cpp  progargs.hpp
Trabajo-Arquitectura-main/ftest-aos/: CMakeLists.txt  ftest_imtoolaos.cpp
Trabajo-Arquitectura-main/ftest-soa/: CMakeLists.txt  ftest_imtoolsoa.cpp
Trabajo-Arquitectura-main/imgaos/: CMakeLists.txt  compressaos.cpp  compressaos.hpp  cutfreqaos.cpp  cutfreqaos.hpp  imageaos.cpp  imageaos.hpp  maxlevelaos.cpp  maxlevelaos.hpp  resizeaos.cpp  resizeaos.hpp
Trabajo-Arquitectura-main/imgsoa/: CMakeLists.txt  compresssoa.cpp  compresssoa.hpp  cutfreqsoa.cpp  cutfreqsoa.hpp  imagesoa.cpp  imagesoa.hpp  maxlevelsoa.cpp  maxlevelsoa.hpp  resizesoa.cpp  resizesoa.hpp
Trabajo-Arquitectura-main/imtool-aos/: CMakeLists.txt  main.cpp
Trabajo-Arquitectura-main/imtool-soa/: CMakeLists.txt  main.cpp
Trabajo-Arquitectura-main/utest-common/: CMakeLists.txt  utest_binaryio.cpp  utest_progargs.cpp
Trabajo-Arquitectura-main/utest-imgaos/: CMakeLists.txt  utest_compressaos.cpp  utest_cutfreqaos.cpp  utest_imageaos.cpp  utest_maxlevelaos.cpp  utest_resizeaos.cpp
Trabajo-Arquitectura-main/utest-imgsoa/: CMakeLists.txt  utest_compresssoa.cpp  utest_cutfreqsoa.cpp  utest_imagesoa.cpp  utest_maxlevelsoa.cpp  utest_resizesoa.cpp
